[project]
name = "vulngraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.0.4",
    "aiohttp>=3.9.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.3",
    "jinja2>=3.1.6",
    "langchain-openai>=1.1.0",
    "langchain-ollama>=1.0.0",
    "rich>=13.5.0",
    "nvdlib>=0.8.3",
    "ddgs>=9.9.2",
]
